IM2: Delete outdated documentation
Also fixes another small batch of bugs.

--- a/provider-integration/im2/docs/theme/index.hbs
+++ b/provider-integration/im2/docs/theme/index.hbs
@@ -108,12 +108,12 @@
                 <img class="dark" src="{{ path_to_root }}ucloud-white.png" alt="UCloud logo"/>
                 {{ book_title }}
 
-                <aside>v2024.1.0</aside>
+                <aside>v2025.1.0</aside>
             </a>
 
             <div style="flex-grow: 1"></div>
 
-            <button id="switch-theme" aria-label="Switch to dark theme">
+            <button id="switch-theme" aria-label="Toggle between light and dark theme">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 96 96"
                      style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                     <g class="toggle-sun">
