--- a/provider-integration/im2/docs/theme/css/general.css
+++ b/provider-integration/im2/docs/theme/css/general.css
@@ -24,6 +24,7 @@ code {
     font-family: var(--mono-font) !important;
     font-size: var(--code-font-size);
     direction: ltr !important;
+    overflow-x: auto;
 }
 
 /* make long words/inline code not x overflow */
@@ -83,6 +84,9 @@ h6:target::before {
 .page {
     outline: 0;
     padding: var(--page-padding);
+    max-width: var(--content-max-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content {
