Minor updates to theme

--- a/provider-integration/im2/docs/theme/css/chrome.css
+++ b/provider-integration/im2/docs/theme/css/chrome.css
@@ -171,7 +171,7 @@ html.light #logo .dark {
 /* Inline code */
 
 :not(pre) > .hljs {
-    display: inline;
+    display: inline-block;
     padding: 0.1em 0.3em;
     border-radius: 3px;
 }
