Core2: WIP for notification and mail service for grant events

--- a/core2/pkg/foundation/mailtpl/grants/approved_to_applicant.j2
+++ b/core2/pkg/foundation/mailtpl/grants/approved_to_applicant.j2
@@ -5,7 +5,7 @@ Your grant application has been approved on UCloud
 <p>Dear {{ recipient }},</p>
 
 <p>
-    We are happy to inform you that your application for resources from '{{ projectTitle }}' has been approved.
+    We are happy to inform you that your application for resources from '{{ applicantProjectTitle }}' has been approved.
 </p>
 
 {{ emailOptOut | safe }}
