--- a/core2/pkg/foundation/mailtpl/grants/comment.j2
+++ b/core2/pkg/foundation/mailtpl/grants/comment.j2
@@ -1,12 +1,11 @@
-New comment in {{ receivingProjectTitle }}
+New comment in {{ applicantProjectTitle }}
 
 {{ bodyStart }}
 
 <p>Dear {{ recipient }},</p>
 
 <p>
-    You have received a new comment from {{ sender }} in an application to the project
-    '{{ projectTitle }}' regarding the project: '{{ receivingProjectTitle }}'.
+    You have received a new comment from {{ sender }} in an application regarding the project: '{{ applicantProjectTitle }}'.
 </p>
 
 {{ emailOptOut | safe }}
