--- a/core2/pkg/foundation/mailtpl/grants/new_application.j2
+++ b/core2/pkg/foundation/mailtpl/grants/new_application.j2
@@ -1,12 +1,12 @@
-New application: {{ projectTitle }}
+New application: {{ applicantProjectTitle }}
 
 {{ bodyStart }}
 
 <p>Dear {{ recipient }},</p>
 
 <p>
-    You have received a new application from {{ sender }} in the project
-    '{{ projectTitle }}'.
+    You have received a new application from {{ sender }} for the project
+    '{{ applicantProjectTitle }}'.
 </p>
 
 {{ emailOptOut | safe }}
