--- a/core2/pkg/foundation/mailtpl/grants/transfer.j2
+++ b/core2/pkg/foundation/mailtpl/grants/transfer.j2
@@ -1,4 +1,4 @@
-{{ applicationProjectTitle }} has been transferred to {{ receiverProject }}
+{{ applicantProjectTitle }} has been transferred to {{ receiverProject }}
 
 {{ bodyStart }}
 
@@ -6,7 +6,7 @@
 
 <p>
     You have been transferred an application from the project '{{ senderProject }}' to your project
-    '{{ receiverProject }}'. Application is called: '{{ applicationProjectTitle }}'
+    '{{ receiverProject }}'. Application is called: '{{ applicantProjectTitle }}'
 </p>
 
 {{ emailOptOut | safe }}
