--- a/core2/pkg/foundation/mailtpl/grants/updated_to_applicant.j2
+++ b/core2/pkg/foundation/mailtpl/grants/updated_to_applicant.j2
@@ -1,10 +1,10 @@
-Your grant application for {{ projectTitle }} has been updated
+Your grant application for {{ applicantProjectTitle }} has been updated
 
 {{ bodyStart }}
 
 <p>Dear {{ recipient }},</p>
 <p>
-    Your application for resources in project '{{ projectTitle }}' has been changed by
+    Your application for resources in project '{{ applicantProjectTitle }}' has been changed by
     {{ sender }}. Please review the changes to the application.
 </p>
 
