--- a/core2/pkg/foundation/mailtpl/grants/rejected_to_applicant.j2
+++ b/core2/pkg/foundation/mailtpl/grants/rejected_to_applicant.j2
@@ -5,7 +5,7 @@ Your grant application has been rejected on UCloud
 <p>Dear {{ recipient }},</p>
 
 <p>
-    We regret to inform you that your application for resources from '{{ projectTitle }}' has been rejected.
+    We regret to inform you that your application for resources from '{{ applicantProjectTitle }}' has been rejected.
 </p>
 
 {{ emailOptOut | safe }}
