--- a/core2/pkg/foundation/mailtpl/base.j2
+++ b/core2/pkg/foundation/mailtpl/base.j2
@@ -15,7 +15,7 @@
         Segoe UI, Roboto, Ubuntu, Cantarell, Oxygen, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
         "Segoe UI Symbol", "Noto Color Emoji";'>
         <div style="padding: .4em .3em .1em 2em; background: #096DE3;">
-            <a href="https://cloud.sdu.dk">
+            <a href="{{ domain }}">
                 <img style="margin-right: .2em;" src="cid:ucloud.png">
             </a>
         </div>
