--- a/core2/pkg/foundation/mailtpl/auth/reset.j2
+++ b/core2/pkg/foundation/mailtpl/auth/reset.j2
@@ -7,8 +7,8 @@ Password reset requested on UCloud
 <p>We have received a request to reset your UCloud account password. To proceed, follow the link below.</p>
 
 <p>
-    <a href="https://cloud.sdu.dk/app/login?password-reset=true&token={{ token }}">
-        https://cloud.sdu.dk/app/login?password-reset=true&token={{ token }}
+    <a href="{{ domain }}/app/login?password-reset=true&token={{ token }}">
+        {{ domain }}/app/login?password-reset=true&token={{ token }}
     </a>
 </p>
 
