--- a/core2/pkg/foundation/mailtpl/auth/verify.j2
+++ b/core2/pkg/foundation/mailtpl/auth/verify.j2
@@ -7,13 +7,13 @@ Please verify your email (UCloud)
 {% if verifyType == "registration" %}
     <p>
         In order to verify your email address, please open the following
-        <a href="{{ link }}">link</a>
+        <a href="{{ link | safe }}">link</a>
     </p>
 {% elif verifyType == "info-update" %}
     <p>
         You, or someone else, has requested changing information affecting your UCloud account.
         We are writing to verify that this request is from you. Please verify this by clicking the following
-        <a href="{{ link }}">link</a>
+        <a href="{{ link | safe }}">link</a>
     </p>
 {% endif %}
 
